--- a/Client/package.json
+++ b/Client/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-dropdown": "^1.11.0",
+    "styled-components": "^5.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
