--- a/Client/package.json
+++ b/Client/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0",
     "react-dropdown": "^1.11.0",
-    "styled-components": "^5.2.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
