--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE="mongodb+srv://<username>:<PASSWORD>@cluster0.ln0psnv.mongodb.net/my?retryWrites=true&w=majority"
+DATABASE="mongodb+srv://Ashwinth:<PASSWORD>@cluster0.ln0psnv.mongodb.net/foodwastemanagement?retryWrites=true&w=majority"
 DATABASE_PASSWORD="1234"
