--- a/Server/config.env
+++ b/Server/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://Arunkarthi:<password>@cluster0.7oxroaa.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://Dineshbabu:<password>@cluster0.7oxroaa.mongodb.net/?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=Arunak@0902
 
