--- a/Server/config.env
+++ b/Server/config.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://Arunkarthi:<password>@cluster0.7oxroaa.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://Arunkarthi:<PASSWORD>@cluster0.7oxroaa.mongodb.net/?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=Arunak@0902
+DATABASE_PASSWORD=12345
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
