--- a/Server/config.env
+++ b/Server/config.env
@@ -1,2 +1,4 @@
+NODE_ENV=development
+PORT=3000
 DATABASE=mongodb+srv://Ashwinth:<PASSWORD>@cluster0.ln0psnv.mongodb.net/foodwastemanagement?retryWrites=true&w=majority
 DATABASE_PASSWORD=12345
