--- a/Server/config.env
+++ b/Server/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://Dineshbabu:<PASSWORD>@cluster0.sbqu3bh.mongodb.net/foodwastemanagement?retryWrites=true
+DATABASE=mongodb+srv://Dineshbabu:<PASSWORD>@cluster0.sbqu3bh.mongodb.net/Foodwastemanagement?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=Aqswdefr1
 
