--- a/Server/config.env
+++ b/Server/config.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://Ashwinth:<PASSWORD>@cluster0.ln0psnv.mongodb.net/foodwastemanagement?retryWrites=true&w=majority
+DATABASE=mongodb+srv://Dineshbabu:<PASSWORD>@cluster0.sbqu3bh.mongodb.net/Foodwastemanagement?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=12345
+DATABASE_PASSWORD=Aqswdefr1
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
