--- a/Client/package.json
+++ b/Client/package.json
@@ -16,10 +16,10 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.1",
+    "react-select": "^5.7.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
