--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "nadonarfoods",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
