--- a/Server/package.json
+++ b/Server/package.json
@@ -4,10 +4,9 @@
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production & nodemon server.js",
-    "debug": "ndb server.js"
-  },
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+ },
   "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
