--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:3000/",
+  "proxy": "https://purple-pronghorn-gown.cyclic.app/",
   "name": "react-responsive-navbar",
   "version": "0.1.0",
   "private": true,
